# DarkVirtualMachine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
src/: arguments.rs  code.rs  lexer.rs  lib.rs  main.rs  test.dark  test.envy  vm.rs
src/cli/: arguments.rs  mod.rs
src/errors/: error.rs  error_kind.rs  mod.rs
src/tokens/: mod.rs  token_kind.rs
src/utils/: error.rs  frames.rs  label.rs  mod.rs  parameter.rs  stack.rs  store.rs  token.rs
src/values/: mod.rs  value.rs  value_kinds.rs  values.rs
