[package]
name = "dark-vm"
version = "0.4.3"
authors = ["Revanth Pothukuchi <revanthpothukuchi123@gmail.com>"]
edition = "2018"
description = "A new VM called the DarkVM, which focuses on speed and simplicity."
readme = "README.md"
repository = "https://github.com/Hacker-007/DarkVirtualMachine"
license = "MIT"
keywords = ["VM", "interpreter", "compiler"]
documentation = "https://docs.rs/dark-vm/0.3.0/dark_vm/"